Bug 336070 - Kickoff keeps growing
Summary: Kickoff keeps growing
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Launcher (Kickoff) widget (other bugs)
Version First Reported In: master
Platform: unspecified Linux
: NOR normal
Target Milestone: 1.0
Assignee: Sebastian Kügler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-11 10:11 UTC by Aleix Pol
Modified: 2014-06-20 15:24 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aleix Pol 2014-06-11 10:11:04 UTC
I have this impression that every time I restart the menu is slightly bigger. That's the current values in the config:
[Containments][1][Applets][2][Configuration][PopupApplet]
DialogHeight=550
DialogWidth=650

This is almost 1/2 my screen, it used to be ~1/4.

Reproducible: Always

Steps to Reproduce:
1. Start plasma shell
2. Shut down
3. Go to 1
Comment 1 Bhushan Shah 2014-06-11 12:11:04 UTC
I once reported this to IRC, once that happened to me but after that never..
Comment 2 Marco Martin 2014-06-11 16:01:53 UTC
does the DialogHeight/DialogWidth values stored in the config file grow as well?
Comment 3 Marco Martin 2014-06-11 16:13:36 UTC
can't reproduce it atm. if i remove the popupapplet section of kickoff it sets it as 555 of height and never moves frmo here between restarts.

can you reproduce the growth if you remove or alter its saved size?
otherwise looks like simply minimum size of the applet that changed over time
Comment 4 Aleix Pol 2014-06-11 21:32:53 UTC
Now the width is 658.
Comment 5 Vishesh Handa 2014-06-20 15:24:57 UTC
Git commit d3de99eb1e59c30a7e0fa53c81dcf0af5cb35d67 by Vishesh Handa.
Committed on 20/06/2014 at 14:36.
Pushed by vhanda into branch 'master'.

AppletQuickItem: Do not remember the popup dialog size

The popup dialog can currently never be resized, so it doesn't make
sense to record its height in a config file. Additionally, this also
causes problems when applet writers change the size of their plasmoid.
Since the old size is saved in the config file, it is shown with the old
dimensions instead of the new ones.

REVIEW: 118849

M  +0    -39   src/plasmaquick/appletquickitem.cpp
M  +0    -1    src/plasmaquick/private/appletquickitem_p.h

http://commits.kde.org/plasma-framework/d3de99eb1e59c30a7e0fa53c81dcf0af5cb35d67