src/plasmaquick/private/appletquickitem_p.h
@@ -93,7 +93,6 @@ public:
     QPointer<QObject> ownLayout;
 
     QTimer compactRepresentationCheckTimer;
-    QTimer fullRepresentationResizeTimer;
 
     Plasma::Applet *applet;
     KDeclarative::QmlObject *qmlObject;
